--- a/shop/templates/registration/login.html
+++ b/shop/templates/registration/login.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 <style>
+  body {
+    background-color: #dde5e8;
+  }
   .container {
     height: 100%;
     align-content: center;
@@ -17,7 +20,7 @@
   .social_icon span {
     font-size: 60px;
     margin-left: 10px;
-    color: #FFC312;
+    color: #dde5e8;
   }
 
   .social_icon span:hover {
@@ -37,7 +40,7 @@
 
   .input-group-prepend span {
     width: 50px;
-    background-color: #FFC312;
+    background-color: #dde5e8;
     color: black;
     border: 0 !important;
   }
@@ -61,7 +64,7 @@
 
   .login_btn {
     color: black;
-    background-color: #FFC312;
+    background-color: #2f7dfc;
     width: 100px;
   }
 
@@ -76,7 +79,14 @@
 
   .links a {
     margin-left: 4px;
+    color: #dde5e8;
   }
+
+  .links a:hover {
+    margin-left: 4px;
+    color: black;
+  }
+
 </style>
 
 
@@ -117,7 +127,7 @@
       </div>
       <div class="card-footer">
         <div class="d-flex justify-content-center links">
-          Don't have an account?<a href="#">Sign Up</a>
+          Don't have an account?<a href="{% url 'signup' %}">Sign Up</a>
         </div>
         <div class="d-flex justify-content-center">
           <a href="#">Forgot your password?</a>
