--- a/shop/templates/registration/login.html
+++ b/shop/templates/registration/login.html
@@ -127,7 +127,7 @@
       </div>
       <div class="card-footer">
         <div class="d-flex justify-content-center links">
-          Don't have an account?<a href="{% url 'signup' %}">Sign Up</a>
+          Don't have an account?<a href="{% url 'signup' %}?next={{request.path}}">Sign Up</a>
         </div>
         <div class="d-flex justify-content-center">
           <a href="#">Forgot your password?</a>
