--- a/shop/templates/registration/registration_form.html
+++ b/shop/templates/registration/registration_form.html
@@ -138,7 +138,7 @@
         </div>
         <div class="card-footer">
           <div class="d-flex justify-content-center links">
-            Already have an account?<a href="{% url 'login' %}">Log In</a>
+            Already have an account?<a href="{% url 'login' %}?next={{request.path}}">Log In</a>
           </div>
           
         </div>
