--- a/cart/templates/layouts/navbar.html
+++ b/cart/templates/layouts/navbar.html
@@ -38,11 +38,12 @@
                 </div>
               </li> -->
               {% if user.is_authenticated %}
-
+              {% if user.is_superuser %}
               <li class="nav-item">
-                <a class="nav-link" href="/d">
+                <a class="nav-link" href="/admin">
                   Admin</a>
               </li>
+              {% endif %}
 
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'profile' username=user %}">
@@ -70,7 +71,7 @@
 
 
           <div class="hearer_icon d-flex">
-            
+
             <a id="search_1" href="#" onclick="toggle('search_input_box')"><i class="ti-search"></i></a>
           </div>
         </nav>
