--- a/shop/templates/layouts/navbar.html
+++ b/shop/templates/layouts/navbar.html
@@ -38,11 +38,12 @@
                 </div>
               </li> -->
               {% if user.is_authenticated %}
-
+              {% if user.is_superuser %}
               <li class="nav-item">
-                <a class="nav-link" href="/d">
+                <a class="nav-link" href="/admin">
                   Admin</a>
               </li>
+              {% endif %}
 
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'profile' username=user %}">
