--- a/shop/templates/search_results.html
+++ b/shop/templates/search_results.html
@@ -1,14 +1,37 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Search Results</h1>
+<div class="container">
 
-<ul>
-  {% for product in object_list %}
-    <li>
-      {{ product.item_name }}, {{ product.item_description }}
-    </li>
-  {% endfor %}
-</ul>
+  <h1 style="text-align: center;">Search Results</h1>
+  {% if object_list %}
+  <div class="row">
+    {% for product in object_list %}
+    <div class="col-md-3 col-sm-6">
+      <div class="product-grid4">
+        <div class="product-image4">
+          <a href="">
+            <!-- <img src="{{ product.item_brand.brand_image.url }}" alt="{{ product.item_brand.brand_name }}" width="30px"> -->
+
+            <img class="pic-1" src="{{ product.item_image.url }}" alt="{{ product.item_name }}">
+          </a>
+          <!-- <span class="product-new-label">Recommended</span> -->
+          <!-- <span class="product-discount-label">-10%</span> -->
+        </div>
+        <div class="product-content">
+          <h3 class="title"><a href="#">{{ product.item_name }}</a></h3>
+          <div class="price">
+            Kshs. {{product.item_price }}
+            <!-- <span>$16.00</span> -->
+          </div>
+          <a class="add-to-cart" href="{% url 'add-to-cart' product.slug %}">ADD TO CART</a>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+  {% else %}
+  <h3>Ooops. Nothing to show!!</h3>
+  {% endif %}
+
+</div>
 {% endblock%}
-
-
