--- a/shop/templates/layouts/navbar.html
+++ b/shop/templates/layouts/navbar.html
@@ -69,7 +69,7 @@
               </li>
               {% else %}
               <li class="nav-item active">
-                <a class="nav-link" href="{% url 'login' %}?next={{request.path}}">
+                <a class="nav-link" href="{% url 'login' %}?next={% url 'landing_page' %}">
                   Login/Register
                 </a>
               </li>
